# embedded-cli

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  codecov.yml  library.json
.github/workflows/: ci.yaml  release.yaml
cmake-modules/: CodeCoverage.cmake
examples/arduino-cli/: .gitignore  arduino-cli.ino
examples/linux-example/: CMakeLists.txt  main.cpp
examples/stm32h7-example/: .gitignore  README.md  STM32H750IBK6-CLI-Example.ioc  STM32H750IBKX_FLASH.ld  STM32H750IBKX_RAM.ld
examples/stm32h7-example/Core/Inc/: cli_binding.h  cli_setup.h  embedded_cli.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  usart.h
examples/stm32h7-example/Core/Src/: cli_binding.c  cli_setup.c  gpio.c  main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  usart.c
examples/win32-example/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  build-shl.py
lib/include/: embedded_cli.h
lib/shl/: .gitignore
lib/src/: embedded_cli.c
tests/: CMakeLists.txt  CliBuilder.cpp  CliBuilder.h  CliMock.cpp  CliMock.h  CliTestRunner.cpp  CliTestRunner.h  CliWrapper.cpp  CliWrapper.h  EmbeddedCliTest.cpp  EmbeddedCliTokensTest.cpp  cli.c
tests/catch2/: catch.cpp  catch.hpp
tests/cli/: AutocompleteTest.cpp  BaseTest.cpp  HelpTest.cpp  HistoryTest.cpp  PrintTest.cpp  StaticAllocationTest.cpp
